--- a/examples_RPi/Makefile
+++ b/examples_RPi/Makefile
@@ -17,7 +17,7 @@ CCFLAGS=-Ofast -mfpu=vfp -mfloat-abi=hard -march=armv6zk -mtune=arm1176jzf-s
 #CCFLAGS=
 
 # define all programs
-PROGRAMS = RF24Mesh_Example_Master RF24Mesh_Example
+PROGRAMS = RF24Mesh_Example_Master RF24Mesh_Example RF24Mesh_Example_Dyn_Master
 SOURCES = ${PROGRAMS:=.cpp}
 
 all: ${PROGRAMS}
