--- a/library.properties
+++ b/library.properties
@@ -7,3 +7,4 @@ paragraph=Provides a simple and seamless 'mesh' layer for sensor networks, allow
 category=Communication
 url=https://tmrh20.github.io/RF24Mesh/
 architectures=avr,esp8266
+depends=RF24,RF24Network
