Update for release

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=RF24Mesh
-version=1.1.2
+version=1.1.3
 author=TMRh20
 maintainer=TMRh20,Avamander
-sentence=A library for NRF24L01(+) devices mesh.
-paragraph=Provides a simple and seamless 'mesh' layer for sensor networks, allowing automatic and dynamic configuration that can be customized to suit many scenarios. It is currently designed to interface directly with with the RF24Network Development library, an OSI Network Layer using nRF24L01(+) radios driven by the newly optimized RF24 library fork.
+sentence=OSI Layer 7, Automated 'mesh' style networking for nrf24L01(+) radios.
+paragraph=Attempting to provide fully automated, wireless, mesh networking for sensor networks/IoT devices. Automated addressing, discovery and operation built on the RF24 communication stack.
 category=Communication
 url=https://tmrh20.github.io/RF24Mesh/
 architectures=*
