only run doxygen on master branch

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -2,9 +2,17 @@ name: DoxyGen build
 
 on:
   pull_request:
+    branches:
+      - master
   push:
+    branches:
+      - master
   release:
-    types: [published, edited]
+    branches:
+      - master
+    types:
+      - published
+      - edited
 
 jobs:
   build-doxygen:
