redirect doc links to nRF24 org

--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=TMRh20,Avamander
 sentence=OSI Layer 7, Automated 'mesh' style networking for nrf24L01(+) radios.
 paragraph=Attempting to provide fully automated, wireless, mesh networking for sensor networks/IoT devices. Automated addressing, discovery and operation built on the RF24 communication stack.
 category=Communication
-url=https://tmrh20.github.io/RF24Mesh/
+url=https://nRF24.github.io/RF24Mesh/
 architectures=*
 depends=RF24,RF24Network
