Rename files so it might work with older versions of cmake as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # (or more exactly: if we just got included in a pico-sdk based project)
 if (PICO_SDK_PATH)
     # If so, load the relevant CMakeLists-file but don't do anything else
-    include(${CMAKE_CURRENT_LIST_DIR}/CMakeLists-PicoSDK.txt)
+    include(${CMAKE_CURRENT_LIST_DIR}/usePicoSDK.cmake)
     return()
 endif()
 
