[no ci] preliminary CMake implementation

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -2,17 +2,12 @@ name: DoxyGen build
 
 on:
   pull_request:
-    branches:
-      - master
+    branches: [master]
   push:
-    branches:
-      - master
+    branches: [master]
   release:
-    branches:
-      - master
-    types:
-      - published
-      - edited
+    branches: [master]
+    types: [published, edited]
 
 jobs:
   build-doxygen:
