--- a/examples_RPi/CMakeLists.txt
+++ b/examples_RPi/CMakeLists.txt
@@ -15,10 +15,10 @@ include(../cmake/detectCPU.cmake) # sets the variable SOC accordingly
 find_library(RF24 rf24 REQUIRED)
 message(STATUS "using RF24 library: ${RF24}")
 
-find_library(RF24Network rf24 REQUIRED)
+find_library(RF24Network rf24network REQUIRED)
 message(STATUS "using RF24Network library: ${RF24Network}")
 
-find_library(RF24Mesh rf24 REQUIRED)
+find_library(RF24Mesh rf24mesh REQUIRED)
 message(STATUS "using RF24Mesh library: ${RF24Mesh}")
 
 foreach(example ${EXAMPLES_LIST})
