avoid duplicate triggers when PR is open

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -3,6 +3,7 @@ name: DoxyGen build
 on:
   pull_request:
     branches: [master]
+    types: [opened, reopened]
   push:
     branches: [master]
   release:
