--- a/examples_RPi/CMakeLists.txt
+++ b/examples_RPi/CMakeLists.txt
@@ -1,11 +1,5 @@
 cmake_minimum_required(VERSION 3.12)
 
-# iterate over a list of examples by filename
-set(EXAMPLES_LIST
-    RF24Mesh_Example
-    RF24Mesh_Example_Master
-    )
-
 project(RF24LogExamples)
 add_compile_options(-Ofast -Wall) # passing the compiler a `-pthread` flag doesn't work here
 
@@ -21,6 +15,12 @@ message(STATUS "using RF24Network library: ${RF24Network}")
 find_library(RF24Mesh rf24mesh REQUIRED)
 message(STATUS "using RF24Mesh library: ${RF24Mesh}")
 
+# iterate over a list of examples by filename
+set(EXAMPLES_LIST
+    RF24Mesh_Example
+    RF24Mesh_Example_Master
+)
+
 foreach(example ${EXAMPLES_LIST})
     # make a target
     add_executable(${example} ${example}.cpp)
@@ -28,3 +28,5 @@ foreach(example ${EXAMPLES_LIST})
     # link the RF24 lib to the target. Notice we specify pthread as a linked lib here
     target_link_libraries(${example} PUBLIC ${RF24} pthread ${RF24Network} ${RF24Mesh})
 endforeach()
+
+add_subdirectory(ncurses)
