--- a/.github/workflows/build_platformIO.yml
+++ b/.github/workflows/build_platformIO.yml
@@ -45,14 +45,14 @@ jobs:
 
       matrix:
         example:
-          - "examples\RF24Mesh_Example\RF24Mesh_Example.ino"
-          - "examples\RF24Mesh_Example_Master_Statics\RF24Mesh_Example_Master_Statics.ino"
-          - "examples\RF24Mesh_Example_Master_To_Nodes\RF24Mesh_Example_Master_To_Nodes.ino"
-          - "examples\RF24Mesh_Example_Node2Node\RF24Mesh_Example_Node2Node.ino"
-          - "examples\RF24Mesh_Example_Node2NodeExtra\RF24Mesh_Example_Node2NodeExtra.ino"
-          - "examples\RF24Mesh_SerialConfig\RF24Mesh_SerialConfig.ino"
+          - "examples/RF24Mesh_Example/RF24Mesh_Example.ino"
+          - "examples/RF24Mesh_Example_Master_Statics/RF24Mesh_Example_Master_Statics.ino"
+          - "examples/RF24Mesh_Example_Master_To_Nodes/RF24Mesh_Example_Master_To_Nodes.ino"
+          - "examples/RF24Mesh_Example_Node2Node/RF24Mesh_Example_Node2Node.ino"
+          - "examples/RF24Mesh_Example_Node2NodeExtra/RF24Mesh_Example_Node2NodeExtra.ino"
+          - "examples/RF24Mesh_SerialConfig/RF24Mesh_SerialConfig.ino"
           # ignore this last one because it only works on AVR chips (uses EEPROM.h)
-          # - "examples\RF24Mesh_Example_Master\RF24Mesh_Example_Master.ino"
+          # - "examples/RF24Mesh_Example_Master/RF24Mesh_Example_Master.ino"
         board:
           - "teensy31"
           - "teensy35"
