--- a/.github/workflows/build_platformIO.yml
+++ b/.github/workflows/build_platformIO.yml
@@ -16,8 +16,38 @@ on:
       - "examples/**"
       - "!examples/old_backups/**"
       - "!examples/rf24_ATTiny/**"
+  release:
+    types: [published, edited]
 
 jobs:
+  validate_lib_json:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: get latest release version number
+        id: latest_ver
+        run: echo "::set-output name=release::$(awk -F "=" '/version/ {print $2}' library.properties)"
+      - name: Set up Python
+        uses: actions/setup-python@v2
+      - name: Install PlatformIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+      - name: package lib
+        run: pio package pack -o PlatformIO-RF24Mesh-${{ steps.latest_ver.outputs.release }}.tar.gz
+      - name: Save artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: "PIO_pkg_RF24Mesh"
+          path: |
+            ${{ github.workspace }}PlatformIO*.tar.gz
+      - name: Upload Release assets
+        if: github.event_name == 'release'
+        uses: csexton/release-asset-action@master
+        with:
+          pattern: "${{ github.workspace }}/build/pkgs/librf24*"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
   check_formatting:
     runs-on: ubuntu-latest
 
@@ -37,7 +67,7 @@ jobs:
             - examples
 
   build:
-    needs: check_formatting
+    needs: [check_formatting, validate_lib_json]
     runs-on: ubuntu-latest
 
     strategy:
@@ -62,32 +92,32 @@ jobs:
           - "teensylc"
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Cache pip
-      uses: actions/cache@v2
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-    - name: Cache PlatformIO
-      uses: actions/cache@v2
-      with:
-        path: ~/.platformio
-        key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
-    - name: Set up Python
-      uses: actions/setup-python@v2
-    - name: Install PlatformIO
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade platformio
-    # "dependencies" field in JSON should automatically install RF24 & RF24Network.
-    # Because we run this CI test against the local repo, the JSON seems neglected
-    - name: Install library dependencies
-      run: |
-        pio lib -g install nrf24/RF24
-        pio lib -g install nrf24/RF24Network
-    - name: Run PlatformIO
-      run: pio ci --lib="." --board=${{ matrix.board }}
-      env:
-        PLATFORMIO_CI_SRC: ${{ matrix.example }}
+      - uses: actions/checkout@v2
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Cache PlatformIO
+        uses: actions/cache@v2
+        with:
+          path: ~/.platformio
+          key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
+      - name: Set up Python
+        uses: actions/setup-python@v2
+      - name: Install PlatformIO
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade platformio
+      # "dependencies" field in JSON should automatically install RF24 & RF24Network.
+      # Because we run this CI test against the local repo, the JSON seems neglected
+      - name: Install library dependencies
+        run: |
+          pio lib -g install nrf24/RF24
+          pio lib -g install nrf24/RF24Network
+      - name: Run PlatformIO
+        run: pio ci --lib="." --board=${{ matrix.board }}
+        env:
+          PLATFORMIO_CI_SRC: ${{ matrix.example }}
