--- a/.github/workflows/build_arduino.yml
+++ b/.github/workflows/build_arduino.yml
@@ -94,10 +94,11 @@ jobs:
             - examples/RF24Mesh_Example_Node2Node
             - examples/RF24Mesh_Example_Node2NodeExtra
             - examples/RF24Mesh_SerialConfig
-          # The following is incompatible with non-AVR boards due to use of EEPROM.h
-          # - examples/RF24Mesh_Example_Master
+            - examples/RF24Mesh_Example_Master
           libraries: |
             - name: RF24
-            - name: RF24Network
+            - source-url: https://github.com/nRF24/RF24Network
+              version: CMake-4-Linux
             - source-path: ./
+          # - name: RF24Network
           fqbn: ${{ matrix.fqbn }}
