allow pybind11 to build in source

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,14 @@ build/
 
 # ignore PlatformIO packages
 *.tar.gz
+
+# Cmake build-in-source generated stuff
+CMakeCache.txt
+CPackConfig.cmake
+CPackSourceConfig.cmake
+CMakeFiles
+DEBIAN
+cmake_install.cmake
+compile_commands.json
+# Makefile is modified when `cmake .` is run
+# Makefile # preserve old/traditional build system
