[CMakeLists.txt] fix last commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,12 +51,13 @@ set_project_warnings(${LibTargetName}_project_warnings)
 
 # setup CPack options
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/CPackInfo.cmake)
+if(NOT DEFINED USE_RF24_LIB_SRC)
+    find_library(RF24 rf24 REQUIRED)
+    message(STATUS "using RF24 library: ${RF24}")
 
-find_library(RF24 rf24 REQUIRED)
-message(STATUS "using RF24 library: ${RF24}")
-
-find_library(RF24Network rf24network REQUIRED)
-message(STATUS "using RF24Network library: ${RF24Network}")
+    find_library(RF24Network rf24network REQUIRED)
+    message(STATUS "using RF24Network library: ${RF24Network}")
+endif()
 
 ###########################
 # create target for bulding the RF24Log lib
@@ -64,16 +65,10 @@ message(STATUS "using RF24Network library: ${RF24Network}")
 add_library(${LibTargetName} SHARED RF24Mesh.cpp)
 target_include_directories(${LibTargetName} PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
-target_link_libraries(${LibTargetName} INTERFACE
-    ${LibTargetName}_project_options
-    ${LibTargetName}_project_warnings
-)
-
 # python wrapper builds from source
 if(DEFINED USE_RF24_LIB_SRC OR pybind11_FOUND OR SKBUILD)
     message(STATUS "Building lib from RF24 source")
     target_compile_definitions(${LibTargetName} PUBLIC USE_RF24_LIB_SRC)
-    target_link_libraries(${LibTargetName} INTERFACE rf24 rf24network)
 
     if(NOT DEFINED RF24_LIB_PATH)
         target_include_directories(${LibTargetName} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../RF24)
@@ -86,8 +81,16 @@ if(DEFINED USE_RF24_LIB_SRC OR pybind11_FOUND OR SKBUILD)
     else()
         target_include_directories(${LibTargetName} PUBLIC ${RF24NETWORK_LIB_PATH})
     endif()
-else()
+
     target_link_libraries(${LibTargetName}
+        INTERFACE ${LibTargetName}_project_options
+        INTERFACE ${LibTargetName}_project_warnings
+    )
+else()
+
+    target_link_libraries(${LibTargetName}
+        INTERFACE ${LibTargetName}_project_options
+        INTERFACE ${LibTargetName}_project_warnings
         SHARED ${RF24}
         SHARED ${RF24Network}
     )
