only run linux CI on "created release" events

--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -27,7 +27,7 @@ on:
       - "pyRF24Mesh/*"
       - ".github/workflows/build_linux.yml"
   release:
-    types: [published, edited]
+    types: [created]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
