[cmake] forgot the ncurses example

--- a/examples_RPi/ncurses/CMakeLists.txt
+++ b/examples_RPi/ncurses/CMakeLists.txt
@@ -8,21 +8,7 @@ set(example RF24Mesh_Ncurses_Master)
 add_executable(${example} ${example}.cpp)
 
 # link the RF24 lib to the target. Notice we specify pthread as a linked lib here
-if("${LibPIGPIO}" STREQUAL "LibPIGPIO-NOTFOUND")
-    target_link_libraries(${example} PUBLIC
-        ${RF24}
-        pthread
-        ${RF24Network}
-        ${RF24Mesh}
-        ${CURSES_LIBRARIES}
-    )
-else()
-    target_link_libraries(${example} PUBLIC
-        ${RF24}
-        pthread
-        ${RF24Network}
-        ${RF24Mesh}
-        ${CURSES_LIBRARIES}
-        ${LibPIGPIO}
-    )
-endif()
+target_link_libraries(${example} PUBLIC
+    ${linked_libs}
+    ${CURSES_LIBRARIES}
+)
