allow RF24_NO_IRQ for building examples

--- a/examples_RPi/CMakeLists.txt
+++ b/examples_RPi/CMakeLists.txt
@@ -47,13 +47,15 @@ elseif("${RF24_DRIVER}" STREQUAL "wiringPi")
     else()
         message(FATAL "Lib ${RF24_DRIVER} not found.")
     endif()
-elseif(NOT "${LibPIGPIO}" STREQUAL "LibPIGPIO-NOTFOUND")
+elseif(NOT "${LibPIGPIO}" STREQUAL "LibPIGPIO-NOTFOUND" AND NOT DEFINED RF24_NO_INTERUPT)
     if(NOT "${RF24_DRIVER}" STREQUAL "pigpio")
         message(STATUS "linking to ${LibPIGPIO} for interrupt support")
     else()
         message(STATUS "linking to ${LibPIGPIO}")
     endif()
     list(APPEND linked_libs ${LibPIGPIO})
+else()
+    message(STATUS "Disabling IRQ pin support")
 endif()
 
 foreach(example ${EXAMPLES_LIST})
@@ -61,6 +63,10 @@ foreach(example ${EXAMPLES_LIST})
     add_executable(${example} ${example}.cpp)
     # link the RF24 lib to the target.
     target_link_libraries(${example} PUBLIC ${linked_libs})
+    # conditionally disable interruot support (a pigpio specific feature)
+    if("${LibPIGPIO}" STREQUAL "LibPIGPIO-NOTFOUND" OR DEFINED RF24_NO_INTERRUPT)
+        target_compile_definitions(${example} PUBLIC RF24_NO_INTERRUPT)
+    endif()
 endforeach()
 
 include(../cmake/enableNcursesExample.cmake)
