--- a/examples_RPi/ncurses/CMakeLists.txt
+++ b/examples_RPi/ncurses/CMakeLists.txt
@@ -12,3 +12,6 @@ target_link_libraries(${example} PUBLIC
     ${linked_libs}
     ${CURSES_LIBRARIES}
 )
+if("${LibPIGPIO}" STREQUAL "LibPIGPIO-NOTFOUND" OR DEFINED RF24_NO_INTERRUPT)
+    target_compile_definitions(${example} PUBLIC RF24_NO_INTERRUPT)
+endif()
